[refactor] : refact to final variable